--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ p{
     align-items: center;
     flex-wrap: wrap;
     padding: 0 30px 0 30px;
-    justify-content: space-between;
+    justify-content: space-evenly;
     border-radius: 40px;
 
 }
@@ -188,9 +188,7 @@ p{
     padding: 0 30px 0 30px;
 }
 .col2{
-    flex-basis: 50%;
-    min-width: 300px;
-    justify-content: center;
+    padding: 20px;
 }
 .col2 img{
     max-width: 100%;
@@ -209,7 +207,6 @@ p{
 }
 .col1 img{
     max-width: 100%;
-    padding: 20px 0;
 }
 .btn{
     display: inline-block;
@@ -469,8 +466,10 @@ p{
         display: none;
     }
     .hero .col1 .btn{
+        text-align: center;
+        padding: 10px;
+        margin: 0 50px;
         display: block;
-        width: 60%;
     }
     .sale .col2 .btn{
         display: block;
