--- a/style.css
+++ b/style.css
@@ -410,7 +410,7 @@ p{
 .signup-form {
     background-color: #fff;
     padding: 30px;
-    margin: 50px 0 100px 500px;
+    margin: auto;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 492px;
